# Realtime-Analytics-Agent

./: .gitignore  pyproject.toml  requirements.txt
src/realtime_analyticsagent/: __init__.py  agent.py  config.py
